# reflens

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  EVAL.md  LICENSE  README.md  RELEASING.md  pyproject.toml
benchmark/: context_sufficiency.py  perf_incremental.py  run.py
reflens/: __init__.py  __main__.py  engine.py  enrich.py  models.py  paths.py  tokenizer.py
reflens/cli/: install.py  main.py
reflens/digest/: __init__.py  builder.py  serialize.py
reflens/extract/: __init__.py  base.py  markdown.py  python_ast.py  regex_fallback.py  registry.py  treesitter.py
reflens/graph/: __init__.py  neighbors.py  resolve.py
reflens/ingest/: __init__.py  base.py  chunker.py  gitmeta.py  repomix.py  walker.py
reflens/mcp/: __init__.py  server.py
reflens/search/: __init__.py  hybrid.py  semantic.py
reflens/store/: __init__.py  blobs.py  db.py
tests/: conftest.py  test_blobs.py  test_centrality.py  test_chunker.py  test_completeness.py  test_digest.py  test_diversify.py  test_extract.py  test_incremental.py  test_lossless.py  test_lossless_fuzz.py  test_mcp.py  test_minors.py  test_paths.py  test_phase2.py  test_reingest.py  test_repomix.py  test_search.py  test_semantic.py  test_symbol_read.py  test_workdir_reap.py
